[gd_scene load_steps=3 format=3 uid="uid://k6240grbegxf"]

[ext_resource type="Theme" uid="uid://bjysepqligucr" path="res://assets/ui/GeneralTheme.tres" id="1_bh5km"]
[ext_resource type="Script" path="res://game/level/DevPanel.gd" id="2_3k7ls"]

[node name="DevPanel" type="VBoxContainer"]
offset_right = 806.0
offset_bottom = 2366.0
scale = Vector2(0.4, 0.4)
theme = ExtResource("1_bh5km")
theme_override_constants/separation = 50
script = ExtResource("2_3k7ls")

[node name="Strategies" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "Strategies"

[node name="StrategyList" type="MenuButton" parent="."]
layout_mode = 2
text = "Used strategies"

[node name="ForcedStrategyList" type="MenuButton" parent="."]
layout_mode = 2
text = "Forced strategies"

[node name="Guesses" type="SpinBox" parent="."]
layout_mode = 2
max_value = 30.0
value = 2.0
rounded = true
suffix = "guesses"
select_all_on_focus = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 80

[node name="FullSolve" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Full solve"

[node name="CancelSolve" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = "Cancel"

[node name="FullSolveType" type="Label" parent="."]
layout_mode = 2
text = "Solving manually"

[node name="GodMode" type="CheckButton" parent="."]
layout_mode = 2
focus_mode = 0
text = "God mode"

[node name="Seed" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Seed: ?"

[node name="Generate" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "Generate"

[node name="FlavorOptions" type="OptionButton" parent="."]
layout_mode = 2
focus_mode = 0

[node name="Interesting" type="CheckButton" parent="."]
layout_mode = 2
focus_mode = 0
text = "Interesting"

[node name="KeepWalls" type="CheckButton" parent="."]
layout_mode = 2
focus_mode = 0
text = "Keep walls"

[node name="KeepWater" type="CheckButton" parent="."]
layout_mode = 2
focus_mode = 0
text = "Keep water"

[node name="KeepVis" type="CheckButton" parent="."]
layout_mode = 2
focus_mode = 0
button_pressed = true
text = "Keep visibility"

[node name="Diags" type="CheckBox" parent="."]
layout_mode = 2
focus_mode = 0
text = "Diagonals"

[node name="Boats" type="CheckBox" parent="."]
layout_mode = 2
focus_mode = 0
text = "Boats"

[node name="Aquariums" type="CheckBox" parent="."]
layout_mode = 2
focus_mode = 0
text = "Aquariums"

[node name="CellHintsLabel" type="Label" parent="."]
layout_mode = 2
text = "CellHints max: 0%"

[node name="CellHintsSlider" type="HSlider" parent="."]
layout_mode = 2
focus_mode = 0
max_value = 50.0

[node name="Paste" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "Paste clipboard"

[node name="Save" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "Save to filesystem"

[node name="CopyToEditor" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "Copy to editor"

[node name="RotateClock" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "Rotate clock"

[node name="MirrorH" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "Mirror horizontal"

[node name="MirrorV" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "Mirror vertical"

[connection signal="mouse_entered" from="Strategies" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Strategies" to="." method="_on_strategies_pressed"]
[connection signal="mouse_entered" from="StrategyList" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="ForcedStrategyList" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="HBoxContainer/FullSolve" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="HBoxContainer/FullSolve" to="." method="_on_full_solve_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/CancelSolve" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="GodMode" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="GodMode" to="." method="_on_god_mode_pressed"]
[connection signal="mouse_entered" from="Seed" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="Generate" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Generate" to="." method="_on_generate_pressed"]
[connection signal="mouse_entered" from="Interesting" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="KeepWalls" to="." method="_on_button_mouse_entered"]
[connection signal="toggled" from="KeepWalls" to="." method="_on_keep_walls_toggled"]
[connection signal="mouse_entered" from="KeepWater" to="." method="_on_button_mouse_entered"]
[connection signal="toggled" from="KeepWater" to="." method="_on_keep_water_toggled"]
[connection signal="mouse_entered" from="KeepVis" to="." method="_on_button_mouse_entered"]
[connection signal="toggled" from="KeepVis" to="." method="_on_keep_vis_toggled"]
[connection signal="mouse_entered" from="Diags" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="Boats" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="Aquariums" to="." method="_on_button_mouse_entered"]
[connection signal="value_changed" from="CellHintsSlider" to="." method="_on_cell_hints_slider_value_changed"]
[connection signal="mouse_entered" from="Paste" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Paste" to="." method="_on_paste_pressed"]
[connection signal="mouse_entered" from="Save" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CopyToEditor" to="." method="_on_copy_to_editor_pressed"]
[connection signal="pressed" from="RotateClock" to="." method="_on_rotate_clock_pressed"]
[connection signal="pressed" from="MirrorH" to="." method="_on_mirror_horizontal"]
[connection signal="pressed" from="MirrorV" to="." method="_on_mirror_vertical"]
